# cachix

./: .envrc  .gitignore  .hlint.yaml  .pre-commit-config.yaml  .travis.yml  ChangeLog.md  NarinfoBatch-Technical-Specification.md  README.md  RELEASE.md  cabal.project  ci.nix  code_review.md  default.nix  deploy.json  devenv.nix  flake.nix  genpaths.nix  git-hooks.nix  hie.yaml  nixpkgs.nix  package.yaml  release.sh  repl  shell.nix  snapshot.yaml  stack.nix  stack.yaml  stack2nix.nix  stagixconf.dhall
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  latest-tag.yml  release.yml  test.yml
cachix/: CHANGELOG.md  ChangeLog.md  LICENSE  README.md  cachix.cabal  package.yaml  process-compose.yaml
cachix-api/: CHANGELOG.md  ChangeLog.md  cachix-api.cabal  package.yaml
cachix-api/cachix-gen-swagger/: Main.hs
cachix-api/src/Cachix/: API.hs  Api.hs
cachix-api/src/Cachix/API/: Deploy.hs  Error.hs  Signing.hs  WebSocketSubprotocol.hs
cachix-api/src/Cachix/API/Deploy/: V1.hs  V2.hs
cachix-api/src/Cachix/Api/: Error.hs  NarInfo.hs  Signing.hs  Swagger.hs  Types.hs
cachix-api/src/Cachix/Formats/: CachixPublicKey.hs  CachixPullToken.hs  CachixSigningKey.hs  Common.hs
cachix-api/src/Cachix/Types/: BinaryCache.hs  BinaryCacheAuthenticated.hs  BinaryCacheCreate.hs  BinaryCacheProtected.hs  BinaryCacheSettings.hs  ByteStringStreaming.hs  ContentTypes.hs  CreateNarResponse.hs  CreateToken.hs  DebugInfo.hs  Deploy.hs  DeployResponse.hs  Deployment.hs  GitHubTeam.hs  MultipartUpload.hs  NarFileName.hs  NarInfo.hs  NarInfoCreate.hs  NarInfoHash.hs  NixCacheInfo.hs  Permission.hs  PinCreate.hs  Realisation.hs  Servant.hs  Session.hs  SigningKeyCreate.hs  SwaggerOrphans.hs
cachix-api/src/Cachix/Types/DeployResponse/: V1.hs  V2.hs
cachix-api/test/: Aeson.hs  DeploySpec.hs  Main.hs
cachix-api/test/Cachix/: FormatsSpec.hs
cachix-gen-swagger/: Main.hs
cachix/cachix/: Main.hs
cachix/cachix-deployment/: Main.hs
cachix/cbits/: aliases.h
cachix/src/Cachix/: Client.hs  Daemon.hs
cachix/src/Cachix/Client/: CNix.hs  Command.hs  Commands.hs  Config.hs  Daemon.hs  Env.hs  Exception.hs  Export.hs  HumanSize.hs  InstallationMode.hs  NetRc.hs  NixConf.hs  NixVersion.hs  OptionsParser.hs  ProcessGraph.hs  Push.hs  PushQueue.hs  Retry.hs  Secrets.hs  Servant.hs  Store.hs  URI.hs  Version.hs  WatchStore.hs
cachix/src/Cachix/Client/Command/: Cache.hs  Config.hs  DebugInfod.hs  Doctor.hs  Import.hs  Pin.hs  Push.hs  Watch.hs
cachix/src/Cachix/Client/Commands/: Export.hs  Push.hs
cachix/src/Cachix/Client/Commands/Export/: OptionsParser.hs
cachix/src/Cachix/Client/Config/: Orphans.hs
cachix/src/Cachix/Client/Daemon/: Client.hs  Event.hs  EventLoop.hs  Listen.hs  Log.hs  PostBuildHook.hs  Progress.hs  Protocol.hs  Push.hs  PushManager.hs  ShutdownLatch.hs  SocketStore.hs  Stats.hs  Status.hs  Subscription.hs  Types.hs  Worker.hs
cachix/src/Cachix/Client/Daemon/PushManager/: PushJob.hs
cachix/src/Cachix/Client/Daemon/Types/: Daemon.hs  Error.hs  EventLoop.hs  Log.hs  PushEvent.hs  PushManager.hs  SocketStore.hs
cachix/src/Cachix/Client/Push/: Conduit.hs  DebugInfo.hs  Options.hs  S3.hs  UploadProgress.hs
cachix/src/Cachix/Client/Store/: Context.hs
cachix/src/Cachix/Daemon/: Client.hs  DryMode.hs  EventLoop.hs  Listen.hs  Log.hs  NarinfoBatch.hs  NarinfoQuery.hs  PROTOCOL.md  PostBuildHook.hs  Progress.hs  Protocol.hs  Push.hs  PushManager.hs  ShutdownLatch.hs  SocketStore.hs  Subscription.hs  TTLCache.hs  TaskQueue.hs  Tracing.hs  Types.hs  Worker.hs
cachix/src/Cachix/Daemon/PushManager/: PushJob.hs
cachix/src/Cachix/Daemon/Types/: Daemon.hs  Error.hs  EventLoop.hs  Log.hs  PushEvent.hs  PushManager.hs  SocketStore.hs  TaskQueue.hs
cachix/src/Cachix/DebugInfod/: BinaryCache.hs  BuildId.hs  Cache.hs  Nar.hs  Server.hs  SourceSelection.hs  StorePath.hs  Types.hs  Vfs.hs
cachix/src/Cachix/Deploy/: Activate.hs  ActivateCommand.hs  Agent.hs  Deployment.hs  Lock.hs  Log.hs  OptionsParser.hs  StdinProcess.hs  Websocket.hs  WebsocketPong.hs
cachix/src/Data/Conduit/: ByteString.hs
cachix/src/System/Nix/: Base32.hs
cachix/test/: DeploySpec.hs  InstallationModeSpec.hs  Main.hs  NetRcSpec.hs  NixConfSpec.hs  NixVersionSpec.hs  URISpec.hs
cachix/test/Daemon/: NarinfoBatchSpec.hs  NarinfoQuerySpec.hs  PostBuildHookSpec.hs  ProtocolSpec.hs  PushManagerSpec.hs  TTLCacheSpec.hs  TaskQueueSpec.hs
cachix/test/data/: add.input  add.output  empty.output  override.input  override.output
nix/: cabal.patch  default.nix  sources.json  sources.nix  stack-shell.nix
scripts/: stack2nix
src/Cachix/: Api.hs
src/Cachix/Types/: ContentTypes.hs
