cabal-version:      2.2
name:               cachix-api
version:            0.3.0
synopsis:           Servant HTTP API specification for https://cachix.org
homepage:           https://github.com/cachix/cachix#readme
bug-reports:        https://github.com/cachix/cachix/issues
author:             Domen Kožar
maintainer:         domen@enlambda.com
copyright:          2018 Domen Kožar
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

common defaults
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fwarn-tabs
    -fwarn-unused-imports -fwarn-missing-signatures
    -fwarn-name-shadowing -fwarn-incomplete-patterns

  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/cachix/cachix

library
  import:          defaults
  exposed-modules:
    Cachix.Api
    Cachix.Api.Error
    Cachix.Api.Signing
    Cachix.Api.Types
    Cachix.Types.BinaryCacheAuthenticated
    Cachix.Types.BinaryCacheCreate
    Cachix.Types.ContentTypes
    Cachix.Types.GitHubTeam
    Cachix.Types.NarInfoCreate
    Cachix.Types.Servant
    Cachix.Types.Session
    Cachix.Types.SigningKeyCreate
    Cachix.Types.SwaggerOrphans

  hs-source-dirs:  src
  build-depends:
    , aeson
    , base                  >=4.7    && <5
    , base16-bytestring
    , bytestring
    , conduit               >=1.3.0
    , cookie
    , cryptonite
    , deepseq
    , exceptions
    , http-api-data
    , http-media
    , lens
    , memory
    , resourcet
    , servant               >=0.14.1
    , servant-auth
    , servant-auth-server
    , servant-auth-swagger
    , servant-client
    , servant-swagger
    , string-conv
    , swagger2
    , text
    , transformers

executable cachix-gen-swagger
  import:         defaults
  main-is:        Main.hs
  hs-source-dirs: cachix-gen-swagger
  build-depends:
    , aeson
    , base        >=4.7 && <5
    , cachix-api

test-suite cachix-api-test
  import:             defaults
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      Spec
  hs-source-dirs:     test
  build-depends:
    , aeson
    , base                     >=4.7    && <5
    , base16-bytestring
    , bytestring
    , cachix-api
    , conduit                  >=1.3.0
    , cookie
    , cryptonite
    , hspec
    , http-api-data
    , http-media
    , lens
    , memory
    , protolude
    , servant                  >=0.14.1
    , servant-auth
    , servant-auth-server
    , servant-auth-swagger
    , servant-swagger
    , servant-swagger-ui-core
    , string-conv
    , swagger2
    , text
    , transformers

  build-tool-depends: hspec-discover:hspec-discover -any
