cabal-version:      2.2
name:               cachix-api
version:            1.0.0
synopsis:           Servant HTTP API specification for https://cachix.org
homepage:           https://github.com/cachix/cachix#readme
bug-reports:        https://github.com/cachix/cachix/issues
author:             Domen Kozar
maintainer:         domen@cachix.org
copyright:          2018 Domen Kozar
category:           Nix
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

common defaults
  default-extensions:
    NoImplicitPrelude
    DeriveAnyClass
    DeriveGeneric
    DerivingVia
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fwarn-tabs
    -fwarn-unused-imports -fwarn-missing-signatures
    -fwarn-name-shadowing -fwarn-incomplete-patterns

  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/cachix/cachix

library
  import:          defaults
  exposed-modules:
    Cachix.API
    Cachix.API.Deploy
    Cachix.API.Error
    Cachix.API.Signing
    Cachix.API.WebSocketSubprotocol
    Cachix.Types.BinaryCache
    Cachix.Types.ByteStringStreaming
    Cachix.Types.ContentTypes
    Cachix.Types.Deploy
    Cachix.Types.DeployResponse
    Cachix.Types.NarFileName
    Cachix.Types.NarInfo
    Cachix.Types.NarInfoCreate
    Cachix.Types.NarInfoHash
    Cachix.Types.NixCacheInfo
    Cachix.Types.Permission
    Cachix.Types.Servant
    Cachix.Types.Session
    Cachix.Types.SigningKeyCreate

  hs-source-dirs:  src
  build-depends:
    , aeson
    , async
    , base                  >=4.7    && <5
    , base16-bytestring
    , bytestring
    , conduit               >=1.3.0
    , cookie
    , cryptonite
    , deepseq
    , deriving-aeson
    , exceptions
    , http-api-data
    , http-media
    , jose
    , lens
    , memory
    , nix-narinfo
    , protolude
    , resourcet
    , servant               >=0.14.1
    , servant-auth
    , servant-auth-swagger
    , servant-client
    , string-conv
    , swagger2
    , text
    , time
    , transformers
    , unordered-containers
    , uuid
    , websockets

test-suite cachix-api-test
  import:             defaults
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    DeploySpec
    Spec

  hs-source-dirs:     test
  build-depends:
    , aeson
    , base                     >=4.7    && <5
    , base16-bytestring
    , bytestring
    , cachix-api
    , conduit                  >=1.3.0
    , cookie
    , cryptonite
    , hspec
    , http-api-data
    , http-media
    , lens
    , memory
    , protolude
    , servant                  >=0.14.1
    , servant-auth
    , servant-auth-swagger
    , servant-swagger
    , servant-swagger-ui-core
    , string-conv
    , swagger2
    , text
    , transformers
    , unordered-containers

  build-tool-depends: hspec-discover:hspec-discover -any
